fix: alignment and headers, section breakpoints

--- a/css/main.css
+++ b/css/main.css
@@ -1577,8 +1577,16 @@ footer {
   width: 18vw;
 }
 
-@media screen and (max-width: 768px) {
+.icons {
+  width:128px;
+  height:128px;
+}
+
+@media screen and (max-width: 820px) {
   
+  .v26_95 {
+    display: none;
+  }
   .button_outer {
     padding: 0em 0em 0em 0em;
   }
@@ -1639,7 +1647,7 @@ footer {
 
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1400px) {
   
   .button_outer {
     padding: 0em 11em 0em 11em;
